--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,8 +12,10 @@ html
 
       div(class='gi-menu')
         ul(class="main-menu")
-          li Home
-          li test 2
+          li
+            a(href="/") Home
+          li
+            a(href="/about") About
 
       div(class='gi-main')
         block content
