Added ability to show all basic blog post content
- added js-base64 for decoding blog text from api
- added asciidoctor.js to decode asciidoc to html
- added highlight.js to highlight code

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,8 @@ block content
       // HEADER
       // ----------------------------------------------------------------
       div(class="post-header") 
-        a(class="title", href="#TODO") #{item.post.title}
+        - const postLink = 'post/' + item.post.id
+        a(class="title", href= postLink) #{item.post.title}
         br
         span(class="grey") written #{item.post.publishedAt} by #{item.post.author.name}
       hr
