--- a/views/post.pug
+++ b/views/post.pug
@@ -1,4 +1,19 @@
 extends layout
 
+block links
+  link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css")
+
+block scripts
+  script(src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js" async)
+  <script>hljs.initHighlightingOnLoad()</script>
+
 block content
-  p Here is your id: #{test}
+  div(class="post")
+    div(class="post-header")
+      h1 #{data.title}
+      <span class="grey">written #{data.publishedAt} by #{data.author.name}</span>
+
+    hr
+    div(class="post-body") !{data.text}
+
+    div(class="post-footer")
