--- a/views/post/index.pug
+++ b/views/post/index.pug
@@ -1,4 +1,4 @@
-extends layout
+extends ../layout
 
 block links
   link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css")
