menu is now at the top to have more space for blog posts

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,10 +16,10 @@ html
         hr
 
       div(class='gi-menu')
-        ul(class="main-menu")
-          li
+        div(class="main-menu")
+          span
             a(href="") Home
-          li
+          span
             a(href="/about") About
 
       div(class='gi-main')
