--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,9 +30,10 @@ a {
 .grid-container {
   display: grid;
   grid-template-areas:
-    'header header header header'
-    'menu main main main'
-    'footer footer footer footer';
+    'header'
+    'menu'
+    'main'
+    'footer';
   grid-gap: 10px;
   padding: 10px;
 }
@@ -41,28 +42,16 @@ a {
   padding: 5px;
 }
 
-@media screen and (max-width: 1000px) {
-  .grid-container {
-    grid-template-areas:
-      'header'
-      'menu'
-      'main'
-      'footer'
-  }
-}
-
 /* Navigation */
 .main-menu {
   padding: 0;
   margin: 0;
-  min-width: 200px;
-  list-style: none;
 }
-.main-menu li {
-  padding: 5px;
+.main-menu span {
+  padding-right: 5px;
 }
 
-.main-menu li a {
+.main-menu span a {
   color: white;
   text-decoration: none;
 }
