--- a/views/post/index.pug
+++ b/views/post/index.pug
@@ -4,7 +4,7 @@ block links
   link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css")
 
 block scripts
-  script(src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js" async)
+  script(src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js")
   <script>hljs.initHighlightingOnLoad()</script>
 
 block content
