--- a/views/post/create.pug
+++ b/views/post/create.pug
@@ -1,4 +1,11 @@
 extends ../layout
 
 block content
-  p this is the create page!!
+  div(class="log-level-form")
+    form(action="TODO", method="post")
+      p Title
+      input(type="text", name="")
+      p Plug
+      textarea(rows="10")
+      p Text
+      textarea(rows="30")
