--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -100,6 +100,27 @@ a {
   border-radius: 5px;
 }
 
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 5px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 200px;
+  float: right;
+  height: 30px;
+}
+
+.login-error-message {
+  padding: 10px;
+  margin: 10px 0;
+  background-color: #7e2d2d;
+}
+
 /* Utility classes */
 .green {
   color: darkgreen;
