--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -17,7 +17,7 @@ block content
             a(class="title", href= item.actions.read.href) #{item.title}
 
             if item.actions.edit || item.actions.delete
-              button(class="post-header-actions-access") ...
+              a(href="#", class="actions-access") ...
 
             br
             span(class="grey") written #{item.publishedAt} by #{item.author.name}
