adjusted look of create page a bit

--- a/app/views/post/create.pug
+++ b/app/views/post/create.pug
@@ -3,9 +3,10 @@ extends ../layout
 block content
   div(class="log-level-form")
     form(action="TODO", method="post")
-      p Title
+      h2 Title
       input(type="text", name="")
-      p Plug
-      textarea(rows="10")
-      p Text
+      h2 Plug
+      textarea(rows="5")
+      h2 Text
       textarea(rows="30")
+      h2 Tags
