--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -3,10 +3,9 @@ html
   head
     title= title
     base(href="http://localhost:3000/")
-    link(rel='stylesheet', href='/stylesheets/style.css')
 
+    link(rel='stylesheet', href='/stylesheets/style.css')
     block links
-    block scripts
 
   body
     div(class='grid-container')
@@ -27,3 +26,6 @@ html
 
       div(class='gi-footer')
         a(href="#") - back to top -
+    
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
+    block scripts
