create form data is now send to web server.
Data still has to be validated and sent to api

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -113,7 +113,7 @@ a {
 }
 
 /* Forms */
-.log-level-form input,
+.log-level-form input[type=text],
 .log-level-form textarea {
   width: 100%;
   background-color: black;
