--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -136,7 +136,7 @@ input[type=submit] {
   height: 30px;
 }
 
-.login-error-message {
+.error-message {
   padding: 10px;
   margin: 10px 0;
   background-color: #7e2d2d;
