changed page titles from dev-null to loglevel-blog

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -10,7 +10,7 @@ html
   body
     div(class='grid-container')
       div(class='gi-header')
-        h1 <span class="green">adrian@dev:</span>~<span class="blue">$</span> dev-null-blog <span class="grey">-h</span>
+        h1 <span class="green">adrian@dev:</span>~<span class="blue">$</span> loglevel-blog <span class="grey">-h</span>
         p A blog about programming
 
       div(class='gi-menu')
