added stub sites for about and license sections

--- a/app/views/licenses.pug
+++ b/app/views/licenses.pug
@@ -3,4 +3,5 @@ extends layout
 mixin copyright-notice(productName, productLink, licenseName, licenseText, other)
 
 block content
-  h2 This blog is made possible thanks to the following awesome projects
+  h2 This blog is made possible thanks to the following awesome frameworks/projects:
+  
