fixed rendering of about page

--- a/app/views/about.pug
+++ b/app/views/about.pug
@@ -1,9 +1,11 @@
 extends layout
 
-h2 about me
-p TODO
+block content
+  h2 about me
+  p TODO
 
-h2 impressum (legal notice required by german law)
-p TODO
+  h2 impressum (legal notice required by german law)
+  p TODO
 
-h2 datenschutz
+  h2 privacy policy
+  p TODO
