added missing docker, nginx and jquery licenses

--- a/app/views/licenses.pug
+++ b/app/views/licenses.pug
@@ -23,6 +23,8 @@ block content
 
   +copyright-notice('debug', 'https://github.com/visionmedia/debug', 'MIT', 'https://github.com/visionmedia/debug/blob/master/LICENSE')
 
+  +copyright-notice('jquery', 'https://jquery.com/', 'MIT', 'https://github.com/jquery/jquery/blob/master/LICENSE.txt')
+
   +copyright-notice('express', 'https://expressjs.com', 'MIT', 'https://github.com/expressjs/express/blob/master/LICENSE')
 
   +copyright-notice('http-errors', 'https://github.com/jshttp/http-errors', 'MIT', 'https://github.com/jshttp/http-errors/blob/master/LICENSE')
@@ -44,6 +46,10 @@ block content
   +copyright-notice('eslint-config-airbnb-base', 'https://github.com/airbnb/javascript', 'MIT', 'https://github.com/airbnb/javascript/blob/master/LICENSE.md')
 
   +copyright-notice('eslint-plugin-import', 'https://github.com/benmosher/eslint-plugin-import', 'MIT', 'https://github.com/benmosher/eslint-plugin-import/blob/master/LICENSE')
+
+  +copyright-notice('docker-ce', 'https://www.docker.com/', 'Apache 2.0', 'https://github.com/moby/moby/blob/master/LICENSE')
+
+  +copyright-notice('nginx', 'http://nginx.org', '2-clause BSD-like license', 'http://nginx.org/LICENSE')
 
   h2 Additionally, the following projects and frameworks were used to create the backend-api powering loglevel-blog:
   hr
