--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -137,12 +137,6 @@ input[type=submit] {
   height: 30px;
 }
 
-.error-message {
-  padding: 10px;
-  margin: 10px 0;
-  background-color: #7e2d2d;
-}
-
 /* Utility classes */
 .green {
   color: darkgreen;
@@ -154,4 +148,62 @@ input[type=submit] {
 
 .grey {
   color: slategrey;
+}
+
+#snackbar {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  width: 500px; /* Set a default minimum width */
+  margin-left: -250px; /* Divide value of min-width by 2 */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  z-index: 1; /* Add a z-index if needed */
+  left: 50%; /* Center the snackbar */
+  bottom: 30px; /* 30px from the bottom */
+}
+
+#snackbar.default {
+  background-color: #333; /* Black background color */
+  color: #fff; /* White text color */
+}
+
+#snackbar.success {
+  background-color: rgb(0, 158, 66); /* Black background color */
+  color: #fff; /* White text color */
+}
+
+#snackbar.error {
+  background-color: rgb(129, 0, 0); /* Black background color */
+  color: #fff; /* White text color */
+}
+
+/* Show the snackbar when clicking on a button (class added with JavaScript) */
+#snackbar.show {
+  visibility: visible; /* Show the snackbar */
+  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+ However, delay the fade out process for 4.5 seconds */
+ -webkit-animation: fadein 0.5s, fadeout 0.5s 4.5s;
+ animation: fadein 0.5s, fadeout 0.5s 4.5s;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
 }
