added links to github and licenses page at the bottom of the page

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -25,6 +25,10 @@ a {
   text-align: center;
 }
 
+.gi-footer > a {
+  margin: 0 5px;
+}
+
 .grid-container {
   margin: 0 auto;
   max-width: 1000px;
