--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -25,7 +25,8 @@ html
         block content
 
       div(class='gi-footer')
-        a(href="#") - back to top -
+        a(href="/licenses") credits
+        a(href="https://github.com/kuper-adrian/loglevel-blog-web") github
     
     if snackbarMessage && snackbarMessage.text
       if snackbarMessage.type !== undefined
