added some about info

--- a/app/views/about.pug
+++ b/app/views/about.pug
@@ -2,10 +2,20 @@ extends layout
 
 block content
   h2 about me
-  p TODO
+  p 
+  | Hi, my name is Adrian Kuper and I am just your average programmer with a passion for
+  | video games, software development and 80s music.
+
+  p You can find me and some of my work at GitHub <a href="https://github.com/kuper-adrian">here</a>.
 
   h2 impressum (legal notice required by german law)
-  p TODO
+  p
+  | Adrian Kuper 
+  | <br/> Berliner Platz 39 
+  | <br/> 48143 Münster 
+  | <br/> Germany 
+  | <br/>
+  | <br/> adrian.kuper@hotmail.de
 
   h2 privacy policy
   p TODO
